// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`export.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare function foo(): void;
export { foo };

=====================================output=====================================
declare function foo(): void;
export { foo };

================================================================================
`;

exports[`implicit.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare module "foo" {
  function greet(name: string): string;
}

=====================================output=====================================
declare module "foo" {
  function greet(name: string): string;
}

================================================================================
`;

exports[`implicit.js format[hermes] 1`] = `
"'{' expected in function declaration (2:38)
  1 | declare module "foo" {
> 2 |   function greet(name: string): string;
    |                                      ^
  3 | }
  4 |
Cause: '{' expected in function declaration (2:38)
  function greet(name: string): string;
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^"
`;
